--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.5.2",
+    "react-markdown": "^10.1.0",
     "react-oidc-context": "^3.3.0",
     "recharts": "^2.15.3",
     "tailwind-merge": "^3.3.0"
