--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-markdown": "^10.1.0",
     "react-oidc-context": "^3.3.0",
     "recharts": "^2.15.3",
+    "remark-gfm": "^4.0.1",
     "tailwind-merge": "^3.3.0"
   },
   "devDependencies": {
